fix end condition

--- a/demo.html
+++ b/demo.html
@@ -8,19 +8,17 @@
 </head>
 <body>
     <pre id="json"></pre>
-    
+    <div id="page-list"></div>    
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-    <div id="page-list">
-
-    </div>
     <script>
         var total = 0;
         var currentPage = 1;
-        var initPageCount = 6;
+        var pageCount = 5;
+        var offset = 0;
+        var limit = 5;
 
-        function getData (offset, limit) {
+        function getData () {
             return new Promise((resolve, reject) => {
                 let settings = {
                     "url": "https://jsonplaceholder.typicode.com/todos",
@@ -41,56 +39,80 @@
                         "total": response.length
                     });
                 });
-                
             });
         }
 
-        async function reloadData (offset = 0, limit = 5) {
+        async function reloadData (goToPage = offset) {
+            offset = goToPage;
             currentPage = offset + 1;
-            await getData(offset, limit)
+            await getData()
                 .then(result => {
                     document.getElementById("json").textContent = JSON.stringify(result.data, undefined, 2);
-                    createPaginationHTML(initPageCount);
+                    createPaginationHTML();
                 });
         }
 
-        function createPaginationHTML(pageCount) {
+        function createPaginationHTML() {
             let start = 0;
             let end = pageCount;
 
             let halfPage = Math.round(pageCount / 2);
+            let totalPage = Math.ceil(total / limit);
 
-            if (currentPage > halfPage) {
+            if (currentPage >= totalPage - halfPage) {
+                start = totalPage - pageCount;
+                end = totalPage;
+            } else if (currentPage > halfPage) {
                 start = currentPage - halfPage;
                 end = start + pageCount;
             }
 
             const element = document.getElementById("page-list");
 
+            // reset pagination
             while (element.firstChild) {
                 element.removeChild(element.firstChild);
             }
-            for (let i = start < 0 ? 0 : start; i < end; i++) {
-                var tag = document.createElement("input");
+
+            // ...
+            if (start != 0) {
+                let tag = document.createElement("input");
+                tag.setAttribute("type", "button");
+                tag.setAttribute("value", "...");
+                tag.disabled = true;
+                tag.style = "border: none;background-color: transparent;"
+                element.appendChild(tag);
+            }
+
+            // render pagination
+            for (let i = start; i < end; i++) {
+                let tag = document.createElement("input");
                 tag.setAttribute("type", "button");
                 tag.setAttribute("value", i + 1);
                 tag.onclick = () => {
                     reloadData(i);
                 };
-
                 if (currentPage == i + 1) {
                     tag.disabled = true;
                 }
-
                 element.appendChild(tag);
+
             }
 
+            // ...
 
+            if (end != totalPage) {
+                let tag = document.createElement("input");
+                tag.setAttribute("type", "button");
+                tag.setAttribute("value", "...");
+                tag.disabled = true;
+                tag.style = "border: none;background-color: transparent;"
+                element.appendChild(tag);
+            }
         }
 
         $("document").ready(async () => {
             await reloadData();
-            createPaginationHTML(initPageCount);
         });
 
 
